# swagger.yaml
@@ -57,6 +57,28 @@ paths:
         500:
           description: 'Server Error'
 
+  /refreshToken:
+    post:
+      tags:
+      - users
+      summary: Refresh Token
+      parameters:
+      - name: body
+        in: body
+        description: user Data
+        required: true
+        schema:
+          $ref: '#/definitions/users'
+      responses:
+        201:
+          description: 'Created'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
 # [GET] users/id
   /users/{id}:
     get:
